# bazel

examples/map_directory_read_artifacts/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
examples/map_directory_read_artifacts/compiler/: BUILD.bazel  main.go
examples/map_directory_read_artifacts/rules/: BUILD.bazel  mod_library.bzl
examples/map_directory_read_artifacts/src/app/: main.src
examples/map_directory_read_artifacts/src/lib/: helper.src  math.src  utils.src
